[gd_scene load_steps=23 format=3 uid="uid://cal5vxpxe60ke"]

[ext_resource type="Texture2D" uid="uid://bqxwsimjepqco" path="res://art/sprites/player/idle2.png" id="1_4s0l1"]
[ext_resource type="Script" path="res://components/unitTargets/card_target_base.gd" id="2_4j76e"]
[ext_resource type="PackedScene" uid="uid://bi6cus3fyu7ux" path="res://components/unitTargets/unitQualityNodes/modifiers_node.tscn" id="3_xemqb"]
[ext_resource type="PackedScene" uid="uid://ctud24sf1fqks" path="res://components/unitTargets/unitQualityNodes/stats_node.tscn" id="4_ln02t"]
[ext_resource type="PackedScene" uid="uid://0pyqt38pl3f4" path="res://components/unitTargets/unitQualityNodes/health_node.tscn" id="5_60liw"]
[ext_resource type="PackedScene" uid="uid://b0spuyowpthca" path="res://components/unitTargets/unitQualityNodes/deck_node.tscn" id="6_h37s8"]
[ext_resource type="PackedScene" uid="uid://bx3b6tvvx5et5" path="res://components/unitTargets/unitQualityNodes/battle_readout.tscn" id="7_1kfwm"]
[ext_resource type="PackedScene" uid="uid://fkpnfc8tmhkj" path="res://components/nodeUtilitiy/card_and_unit_area_detection.tscn" id="8_dyn65"]
[ext_resource type="PackedScene" uid="uid://34o105ivvj6t" path="res://target_indicator.tscn" id="9_s430e"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nte8v"]
atlas = ExtResource("1_4s0l1")
region = Rect2(0, 0, 112, 252)

[sub_resource type="AtlasTexture" id="AtlasTexture_m766r"]
atlas = ExtResource("1_4s0l1")
region = Rect2(112, 0, 112, 252)

[sub_resource type="AtlasTexture" id="AtlasTexture_31wrc"]
atlas = ExtResource("1_4s0l1")
region = Rect2(224, 0, 112, 252)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkm38"]
atlas = ExtResource("1_4s0l1")
region = Rect2(336, 0, 112, 252)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfxog"]
atlas = ExtResource("1_4s0l1")
region = Rect2(448, 0, 112, 252)

[sub_resource type="SpriteFrames" id="SpriteFrames_urjdb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nte8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m766r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31wrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkm38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfxog")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_238uk"]
radius = 34.0
height = 178.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ab5fk"]
lifetime_randomness = 0.2
particle_flag_disable_z = true
emission_shape_offset = Vector3(0, 100, 0)
emission_shape = 3
emission_box_extents = Vector3(60, 20, 1)
direction = Vector3(0, 100, 0)
initial_velocity_min = 100.0
initial_velocity_max = 250.0
orbit_velocity_min = -0.0999999
orbit_velocity_max = 0.1
radial_velocity_min = -20.0
radial_velocity_max = 40.0
gravity = Vector3(0, -200, 0)
linear_accel_min = -2.23517e-06
linear_accel_max = 250.0
scale_max = 5.0
color = Color(1, 0.37745, 0.398392, 1)
hue_variation_min = -0.01
hue_variation_max = 0.1

[sub_resource type="Animation" id="Animation_q3a01"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -126)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../TwoWayDetection/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../UnitParticles:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../BattleReadout:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_5k3bh"]
resource_name = "die"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -126), Vector2(0, -378)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../TwoWayDetection/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../UnitParticles:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../BattleReadout:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.1, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_6pn0e"]
resource_name = "heal"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 1, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_lq4h6"]
resource_name = "take_damage"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_273pk"]
_data = {
"RESET": SubResource("Animation_q3a01"),
"die": SubResource("Animation_5k3bh"),
"heal": SubResource("Animation_6pn0e"),
"take_damage": SubResource("Animation_lq4h6")
}

[node name="CardTarget" type="Node2D"]
script = ExtResource("2_4j76e")

[node name="UnitSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_urjdb")
animation = &"idle"
autoplay = "idle"
frame = 2
offset = Vector2(0, -126)

[node name="TwoWayDetection" parent="." node_paths=PackedStringArray("target_indicator") groups=["player_hitbox"] instance=ExtResource("8_dyn65")]
position = Vector2(0, -129)
target_indicator = NodePath("../TargetIndicator")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="TwoWayDetection"]
shape = SubResource("CapsuleShape2D_238uk")

[node name="Modifiers" parent="." instance=ExtResource("3_xemqb")]

[node name="StatsNode" parent="." instance=ExtResource("4_ln02t")]

[node name="HealthNode" parent="." node_paths=PackedStringArray("statsNode", "modifiers") instance=ExtResource("5_60liw")]
statsNode = NodePath("../StatsNode")
modifiers = NodePath("../Modifiers")

[node name="DeckNode" parent="." instance=ExtResource("6_h37s8")]

[node name="BattleReadout" parent="." node_paths=PackedStringArray("statsNode", "healthNode") instance=ExtResource("7_1kfwm")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -318.5
offset_right = -75.0
offset_bottom = -318.5
grow_horizontal = 2
grow_vertical = 2
statsNode = NodePath("../StatsNode")
healthNode = NodePath("../HealthNode")

[node name="TargetIndicator" parent="." instance=ExtResource("9_s430e")]
position = Vector2(5, -355.5)

[node name="UnitParticles" type="GPUParticles2D" parent="."]
scale = Vector2(0.336442, 1e-05)
emitting = false
amount = 100
process_material = SubResource("ParticleProcessMaterial_ab5fk")
one_shot = true
explosiveness = 0.5
randomness = 0.5

[node name="Animations" type="AnimationPlayer" parent="."]
root_node = NodePath("../UnitSprite")
libraries = {
"": SubResource("AnimationLibrary_273pk")
}

[connection signal="health_updated" from="HealthNode" to="BattleReadout" method="update_readout"]
